Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -165,7 +165,8 @@
    ],
    "source": [
     "\"art vandelay\" # 'Art Vandelay'\n",
-    "name = "
+    "name = \"art vandelay\"\n",
+    "name.title"
    ]
   },
   {
