--- a/index.ipynb
+++ b/index.ipynb
@@ -149,16 +149,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'art vandelay'"
+       "'Art Vandelay'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,7 +166,7 @@
    "source": [
     "\"art vandelay\" # 'Art Vandelay'\n",
     "name = \"art vandelay\"\n",
-    "name.title"
+    "name.title()"
    ]
   },
   {
