--- a/index.ipynb
+++ b/index.ipynb
@@ -185,7 +185,8 @@
    "outputs": [],
    "source": [
     "\"Ceo\" # 'CEO'\n",
-    "name = "
+    "name = 'Ceo'\n",
+    "name.upper()"
    ]
   },
   {
