--- a/index.ipynb
+++ b/index.ipynb
@@ -215,7 +215,7 @@
    "source": [
     "\"art.vandelay@vandelay.co\" # False\n",
     "email = 'art.vandelay@vandelay.co'\n",
-    "boo(email).endswith()"
+    "boo(email).endswith('.com')"
    ]
   },
   {
