--- a/index.ipynb
+++ b/index.ipynb
@@ -224,8 +224,7 @@
    ],
    "source": [
     "\"art.vandelay@vandelay.co\" # False\n",
-    "email = 'art.vandelay@vandelay.co'\n",
-    "em"
+    "email = 'art.vandelay@vandelay.co'\n"
    ]
   },
   {
