--- a/index.ipynb
+++ b/index.ipynb
@@ -224,7 +224,8 @@
    ],
    "source": [
     "\"art.vandelay@vandelay.co\" # False\n",
-    "email = 'art.vandelay@vandelay.co'\n"
+    "email = 'art.vandelay@vandelay.co'\n",
+    "bool()"
    ]
   },
   {
