--- a/index.ipynb
+++ b/index.ipynb
@@ -225,7 +225,7 @@
    "source": [
     "\"art.vandelay@vandelay.co\" # False\n",
     "email = 'art.vandelay@vandelay.co'\n",
-    "bool(email).endswith "
+    "bool(email) endswith('.com')"
    ]
   },
   {
