--- a/index.ipynb
+++ b/index.ipynb
@@ -221,8 +221,7 @@
    ],
    "source": [
     "\"art.vandelay@vandelay.co\" # False\n",
-    "email = 'art.vandelay@vandelay.co'\n",
-    "bool(email)"
+    "email = 'art.vandelay@vandelay.co'\n"
    ]
   },
   {
