Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -244,7 +244,8 @@
    "outputs": [],
    "source": [
     "'vandelay.com' # 'www.vandelay.com'\n",
-    "end = 'van'"
+    "end = 'vandelay.com'\n",
+    "'www' + end"
    ]
   },
   {
