--- a/index.ipynb
+++ b/index.ipynb
@@ -236,16 +236,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'www.vandelay.com'"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "'vandelay.com' # 'www.vandelay.com'\n",
     "end = 'vandelay.com'\n",
-    "'www' + end"
+    "'www.' + end"
    ]
   },
   {
