--- a/index.ipynb
+++ b/index.ipynb
@@ -281,7 +281,7 @@
    "outputs": [],
    "source": [
     "\"7285553334\" # 728\n",
-    "number = '72'"
+    "number = '7285553334'\n"
    ]
   },
   {
