--- a/index.ipynb
+++ b/index.ipynb
@@ -281,7 +281,8 @@
    "outputs": [],
    "source": [
     "\"7285553334\" # 728\n",
-    "p = '7285553334'\n"
+    "pNumber = '7285553334'\n",
+    "pNumber"
    ]
   },
   {
