--- a/index.ipynb
+++ b/index.ipynb
@@ -282,7 +282,7 @@
    "source": [
     "\"7285553334\" # 728\n",
     "pNumber = '7285553334'\n",
-    "pNumber"
+    "pNumber[:]"
    ]
   },
   {
